# bazel_demo

./: README.md  WORKSPACE.bazel  copts.bzl
src/module_1/: BUILD.bazel  hello_bazel.c  hello_bazel.h
src/module_2/: BUILD.bazel  main.c
src/module_cpp/: BUILD.bazel  glog_test.cpp
